<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="1000dp"
    android:minHeight="450dp">

    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alarmPicker"></TimePicker>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/take"/>

    <NumberPicker
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:id ="@+id/Dose"></NumberPicker>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TimePicker_B_Add"
            android:layout_gravity="center"
            android:background="@color/whiteColor"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="10dp"
            android:text="@string/label_AddTimeandDose"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/whiteColor"
            android:textColor="@color/colorAccent"
            android:id="@+id/TimePicker_B_Cancel"
            android:text="@string/label_Cancel"/>
        </LinearLayout>


</LinearLayout>