<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.maiajam.medcinealram.ui.AddMedcine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/label_medcineInfo"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/ed_medName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/MedcineName"
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"/>

                <EditText
                    android:id="@+id/ed_medNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/MedcineNote" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labMedTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/RemAt"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />


                <Spinner
                    android:id="@+id/Sp_DayTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorAccent"
                    android:entries="@array/day_time" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/ed_FirstAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/startAT"
                        android:textSize="10sp" />

                    <EditText
                        android:id="@+id/ed_Dose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/label_medcineDose"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/ed_secondAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:hint="@string/secondAla"
                        android:textSize="10sp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/ed_SecondDose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/label_SecmedcineDose"
                        android:textSize="10sp"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ed_thirdAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/ThAla"
                        android:textSize="10dp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/ed_ThirdDose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_thirdDose"
                        android:textSize="10dp"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_startingFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startFrom"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold|italic" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/startPiker_Time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:clickable="true"
                        android:textSize="10sp" />

                    <ImageButton
                        android:id="@+id/dropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:src="@drawable/ic_dropdown" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/Days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/ch_everyDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/colorAccent"
                        android:text="@string/everyDay" />

                    <RadioButton
                        android:id="@+id/ch_daysWeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:textColor="@color/colorAccent"
                        android:text="@string/daysWeek" />


                </RadioGroup>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
